Refactored sale page

--- a/src/sale.html
+++ b/src/sale.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="uk">
 @@include('html/head.html', {
-'title': 'Акции'
+'title': 'Акції'
 })
 
 <body>
@@ -10,10 +10,10 @@
         <main class="page catalog">
             <div class="page__container">
                 <ul class="breadcrumbs">
-                    <li class="breadrrumbs__item"><a href="">Главная</a></li>
-                    <li class="breadrrumbs__item"><a href="">Акции</a></li>
+                    <li class="breadcrumbs__item"><a href="/">Головна</a></li>
+                    <li class="breadcrumbs__item"><span class="breadcrumbs__item-current">Акції</span></li>
                 </ul>
-                <h1 class="catalog-title title-first">Акции</h1>
+                <h1 class="catalog-title title-first">Акції</h1>
                 <section class="calalog__products">
                     <div class="product-card">
                         <div class="product-card__img"><a href="./product.html"><img src="img/category.jpg"
@@ -23,11 +23,11 @@
                                 SCAR
                                 (G733PY-XS96)</a></h3>
                         <div class="product-card__bottom">
-                            <div class="product-card__price">
-                                <p class="product-card__old-price">19999 грн</p>
-                                <p class="product-card__actual-price">15000 грн</p>
+                            <div class="product-card-price">
+                                <p class="product-card-price__old">19999 грн</p>
+                                <p class="product-card-price__actual">15000 грн</p>
                             </div>
-                            <a href="./product.html" class="product-card__buy button">Купить</a>
+                            <a href="./product.html" class="product-card__buy button">Придбати</a>
                         </div>
                     </div>
                     <div class="product-card">
@@ -38,11 +38,11 @@
                                 SCAR
                                 (G733PY-XS96)</a></h3>
                         <div class="product-card__bottom">
-                            <div class="product-card__price">
-                                <p class="product-card__old-price">19999 грн</p>
-                                <p class="product-card__actual-price">15000 грн</p>
+                            <div class="product-card-price">
+                                <p class="product-card-price__old">19999 грн</p>
+                                <p class="product-card-price__actual">15000 грн</p>
                             </div>
-                            <a href="./product.html" class="product-card__buy button">Купить</a>
+                            <a href="./product.html" class="product-card__buy button">Придбати</a>
                         </div>
                     </div>
                     <div class="product-card">
@@ -53,11 +53,11 @@
                                 SCAR
                                 (G733PY-XS96)</a></h3>
                         <div class="product-card__bottom">
-                            <div class="product-card__price">
-                                <p class="product-card__old-price">19999 грн</p>
-                                <p class="product-card__actual-price">15000 грн</p>
+                            <div class="product-card-price">
+                                <p class="product-card-price__old">19999 грн</p>
+                                <p class="product-card-price__actual">15000 грн</p>
                             </div>
-                            <a href="./product.html" class="product-card__buy button">Купить</a>
+                            <a href="./product.html" class="product-card__buy button">Придбати</a>
                         </div>
                     </div>
                     <div class="product-card">
@@ -68,11 +68,11 @@
                                 SCAR
                                 (G733PY-XS96)</a></h3>
                         <div class="product-card__bottom">
-                            <div class="product-card__price">
-                                <p class="product-card__old-price">19999 грн</p>
-                                <p class="product-card__actual-price">15000 грн</p>
+                            <div class="product-card-price">
+                                <p class="product-card-price__old">19999 грн</p>
+                                <p class="product-card-price__actual">15000 грн</p>
                             </div>
-                            <a href="./product.html" class="product-card__buy button">Купить</a>
+                            <a href="./product.html" class="product-card__buy button">Придбати</a>
                         </div>
                     </div>
                     <div class="product-card">
@@ -83,11 +83,11 @@
                                 SCAR
                                 (G733PY-XS96)</a></h3>
                         <div class="product-card__bottom">
-                            <div class="product-card__price">
-                                <p class="product-card__old-price">19999 грн</p>
-                                <p class="product-card__actual-price">15000 грн</p>
+                            <div class="product-card-price">
+                                <p class="product-card-price__old">19999 грн</p>
+                                <p class="product-card-price__actual">15000 грн</p>
                             </div>
-                            <a href="./product.html" class="product-card__buy button">Купить</a>
+                            <a href="./product.html" class="product-card__buy button">Придбати</a>
                         </div>
                     </div>
                     <div class="product-card">
@@ -98,11 +98,11 @@
                                 SCAR
                                 (G733PY-XS96)</a></h3>
                         <div class="product-card__bottom">
-                            <div class="product-card__price">
-                                <p class="product-card__old-price">19999 грн</p>
-                                <p class="product-card__actual-price">15000 грн</p>
+                            <div class="product-card-price">
+                                <p class="product-card-price__old">19999 грн</p>
+                                <p class="product-card-price__actual">15000 грн</p>
                             </div>
-                            <a href="./product.html" class="product-card__buy button">Купить</a>
+                            <a href="./product.html" class="product-card__buy button">Придбати</a>
                         </div>
                     </div>
                     <div class="product-card">
@@ -113,16 +113,16 @@
                                 SCAR
                                 (G733PY-XS96)</a></h3>
                         <div class="product-card__bottom">
-                            <div class="product-card__price">
-                                <p class="product-card__old-price">19999 грн</p>
-                                <p class="product-card__actual-price">15000 грн</p>
+                            <div class="product-card-price">
+                                <p class="product-card-price__old">19999 грн</p>
+                                <p class="product-card-price__actual">15000 грн</p>
                             </div>
-                            <a href="./product.html" class="product-card__buy button">Купить</a>
+                            <a href="./product.html" class="product-card__buy button">Придбати</a>
                         </div>
                     </div>
                 </section>
                 <div class="pagging">
-                    <a href="" class="pagging__arrow pagging__arrow_left">
+                    <a href="" class="pagging-arrow pagging-arrow_left">
                         <svg width="28" height="28">
                             <use xlink:href="img/icons/icons.svg#arrow-blue"></use>
                         </svg>
@@ -144,7 +144,7 @@
                             <a href="" class="pagging__item">10</a>
                         </li>
                     </ul>
-                    <a href="" class="pagging__arrow pagging__arrow_right">
+                    <a href="" class="pagging-arrow pagging-arrow_right">
                         <svg width="28" height="28">
                             <use xlink:href="img/icons/icons.svg#arrow-blue"></use>
                         </svg>
