Fixed phone validation bug

--- a/src/html/callback.html
+++ b/src/html/callback.html
@@ -15,8 +15,8 @@
                     <input id="name" class="form__input" type="text" name="name" placeholder="ПІБ" required>
                 </div>
                 <div class="form__block _half-row">
-                    <label for="phone" class="form__label">Телефон</label>
-                    <input id="phone" class="form__input" id="phone__cart" type="tel" name="phone" placeholder="+38 (___) ___-____"
+                    <label for="phone__call" class="form__label">Телефон</label>
+                    <input class="form__input" id="phone__call" type="tel" name="phone" placeholder="+38 (___) ___-____"
                         required>
                 </div>
                 <div class="form__block">
