--- a/src/contacts.html
+++ b/src/contacts.html
@@ -37,7 +37,7 @@
                             </div>
                             <div class="form__block _half-row">
                                 <label for="phone" class="form__label">Телефон</label>
-                                <input id="phone" class="form__input" id="phone__cart" type="tel" name="phone" placeholder="+38 (___) ___-____"
+                                <input id="phone" class="form__input" type="tel" name="phone" placeholder="+38 (___) ___-____"
                                     required>
                             </div>
                             <div class="form__block">
