--- a/src/html/cart-popup.html
+++ b/src/html/cart-popup.html
@@ -91,8 +91,8 @@
                 <input id="email" class="form__input" type="email" name="email" placeholder="mail@mail.com">
             </div>
             <div class="form__block _half-row">
-                <label for="phone" class="form__label">Телефон</label>
-                <input id="phone" class="form__input" id="phone__cart" type="tel" name="phone" placeholder="+38 (___) ___-____"
+                <label for="phone__cart" class="form__label">Телефон</label>
+                <input id="phone__cart" class="form__input" type="tel" name="phone" placeholder="+38 (___) ___-____"
                     required>
             </div>
             <div class="form__block">
