--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,56 +1,58 @@
 <footer class="footer">
-  <div class="footer__container">
-    <div data-spollers="767" class="footer__body">
-      <div class="footer-column footer-column_align-center">
-        <div class="footer-logo"><img src="img/logo.jpg" alt="Laptopia logo"></div>
-      </div>
-      <div class="footer-column footer-column_last">
-        <h3 class="footer-column__title">Зв'язатися з нами</h3>
-        <ul class="footer-column__list">
-          <li class="footer-column__item"><a href="tel:+0885444800">088-544-4800</a></li>
-          <li class="footer-column__item"><a href="tel:+0885444800">544-448-7859</a></li>
-          <li class="footer-column__item">
-            <a href="#">
-              <svg width="25" height="25" fill="white">
-                <use xlink:href="img/icons/icons.svg#telegram"></use>
-              </svg>
-            </a>
-            <a href="#">
-              <svg width="25" height="25" fill="white">
-                <use xlink:href="img/icons/icons.svg#instagram"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-      </div>
-      <div class="footer-column">
-        <h3 data-spoller class="footer-column__title">
-          Каталог
-          <svg width="35" height="35">
-            <use xlink:href="img/icons/icons.svg#more"></use>
-          </svg>
-        </h3>
-        <ul class="footer-column__list">
-          <li class="footer-column__item"><a href="./catalog.html">Ноутбуки</a></li>
-          <li class="footer-column__item"><a href="./catalog.html">Ноутбуки</a></li>
-          <li class="footer-column__item"><a href="./catalog.html">Ноутбуки</a></li>
-          <li class="footer-column__item"><a href="./catalog.html">Ноутбуки</a></li>
-          <li class="footer-column__item"><a href="./catalog.html">Ноутбуки</a></li>
-        </ul>
-      </div>
-      <div class="footer-column">
-        <h3 data-spoller class="footer-column__title">
-          Клієнтам
-          <svg width="35" height="35">
-            <use xlink:href="img/icons/icons.svg#more"></use>
-          </svg>
-        </h3>
-        <ul class="footer-column__list">
-          <li class="footer-column__item"><a href="">Про нас</a></li>
-          <li class="footer-column__item"><a href="">Доставка</a></li>
-          <li class="footer-column__item"><a href="">Гарантія</a></li>
-        </ul>
-      </div>
+  <div data-spollers="767" class="footer__body container">
+    <div class="footer__column footer__column_align_center">
+      <div class="logo logo_border-radius"><img src="img/logo.jpg" alt="Laptopia logo"></div>
+    </div>
+    <div class="footer__column footer-column_last">
+      <h3 class="footer__title">Зв'язатися з нами</h3>
+      <ul class="phones">
+        <li class="phones__item"><a href="tel:+0885444800">088-544-4800</a></li>
+        <li class="phones__item"><a href="tel:+5444487859">544-448-7859</a></li>
+      </ul>
+      <ul class="socials">
+        <li class="socials__item">
+          <a href="#">
+            <svg width="25" height="25">
+              <use xlink:href="img/icons/icons.svg#telegram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="socials__item">
+          <a href="#">
+            <svg width="25" height="25">
+              <use xlink:href="img/icons/icons.svg#instagram"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div class="footer__column">
+      <h3 data-spoller class="footer__title">
+        Каталог
+        <svg width="35" height="35">
+          <use xlink:href="img/icons/icons.svg#more"></use>
+        </svg>
+      </h3>
+      <ul class="footer-column__list">
+        <li class="footer-column__item"><a href="./catalog.html">Ноутбуки</a></li>
+        <li class="footer-column__item"><a href="./catalog.html">Ноутбуки</a></li>
+        <li class="footer-column__item"><a href="./catalog.html">Ноутбуки</a></li>
+        <li class="footer-column__item"><a href="./catalog.html">Ноутбуки</a></li>
+        <li class="footer-column__item"><a href="./catalog.html">Ноутбуки</a></li>
+      </ul>
+    </div>
+    <div class="footer__column">
+      <h3 data-spoller class="footer__title">
+        Клієнтам
+        <svg width="35" height="35">
+          <use xlink:href="img/icons/icons.svg#more"></use>
+        </svg>
+      </h3>
+      <ul class="list list_style_none">
+        <li class="list__item"><a href="">Про нас</a></li>
+        <li class="list__item"><a href="">Доставка</a></li>
+        <li class="list__item"><a href="">Гарантія</a></li>
+      </ul>
     </div>
   </div>
 </footer>
