changed name of color vars

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header text-light">
 	<div class="header__top">
 		<div class="logo"><a href="./index.html"><img src="img/logo.jpg" alt="Laptopia logo"></a></div>
 		<div class="header__row">
