remade footer styles according to bem

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,11 +1,11 @@
-<footer class="footer">
+<footer class="footer text-light">
   <div data-spollers="767" class="footer__body container">
     <div class="footer__column footer__column_align_center">
       <div class="logo logo_border-radius"><img src="img/logo.jpg" alt="Laptopia logo"></div>
     </div>
-    <div class="footer__column footer-column_last">
+    <div class="footer__column footer__column_last">
       <h3 class="footer__title">Зв'язатися з нами</h3>
-      <ul class="phones">
+      <ul class="phones footer__phones">
         <li class="phones__item"><a href="tel:+0885444800">088-544-4800</a></li>
         <li class="phones__item"><a href="tel:+5444487859">544-448-7859</a></li>
       </ul>
@@ -33,12 +33,12 @@
           <use xlink:href="img/icons/icons.svg#more"></use>
         </svg>
       </h3>
-      <ul class="footer-column__list">
-        <li class="footer-column__item"><a href="./catalog.html">Ноутбуки</a></li>
-        <li class="footer-column__item"><a href="./catalog.html">Ноутбуки</a></li>
-        <li class="footer-column__item"><a href="./catalog.html">Ноутбуки</a></li>
-        <li class="footer-column__item"><a href="./catalog.html">Ноутбуки</a></li>
-        <li class="footer-column__item"><a href="./catalog.html">Ноутбуки</a></li>
+      <ul class="list list_style_none">
+        <li class="list__item link"><a href="./catalog.html">Ноутбуки</a></li>
+        <li class="list__item link"><a href="./catalog.html">Ноутбуки</a></li>
+        <li class="list__item link"><a href="./catalog.html">Ноутбуки</a></li>
+        <li class="list__item link"><a href="./catalog.html">Ноутбуки</a></li>
+        <li class="list__item link"><a href="./catalog.html">Ноутбуки</a></li>
       </ul>
     </div>
     <div class="footer__column">
@@ -49,9 +49,9 @@
         </svg>
       </h3>
       <ul class="list list_style_none">
-        <li class="list__item"><a href="">Про нас</a></li>
-        <li class="list__item"><a href="">Доставка</a></li>
-        <li class="list__item"><a href="">Гарантія</a></li>
+        <li class="list__item link"><a href="">Про нас</a></li>
+        <li class="list__item link"><a href="">Доставка</a></li>
+        <li class="list__item link"><a href="">Гарантія</a></li>
       </ul>
     </div>
   </div>
