--- a/src/html/header.html
+++ b/src/html/header.html
@@ -60,20 +60,20 @@
 				<div class="menu-catalog" data-spollers>
 					<button class="menu-catalog__btn" type="button" data-spoller>Каталог</button>
 					<ul class="menu-catalog__list">
-						<li class="menu-catalog__item"><a href="./catalog.html">Ноутбуки</a></li>
-						<li class="menu-catalog__item"><a href="./catalog.html">Комплекутючі для ПК</a></li>
-						<li class="menu-catalog__item"><a href="./catalog.html">Роутери</a></li>
-						<li class="menu-catalog__item"><a href="./catalog.html">Монітори</a></li>
+						<li class="menu-catalog__item link"><a href="./catalog.html">Ноутбуки</a></li>
+						<li class="menu-catalog__item link"><a href="./catalog.html">Комплекутючі для ПК</a></li>
+						<li class="menu-catalog__item link"><a href="./catalog.html">Роутери</a></li>
+						<li class="menu-catalog__item link"><a href="./catalog.html">Монітори</a></li>
 					</ul>
 				</div>
 			</li>
-			<li class="menu__item"><a href="./sale.html">Акції</a></li>
-			<li class="menu__item"><a href="#">Оплата</a></li>
-			<li class="menu__item"><a href="#">Гарантія</a></li>
-			<li class="menu__item"><a href="./contacts.html">Контакти</a></li>
-			<li class="menu__item"><a href="#">Доставка</a></li>
-			<li class="menu__item"><a href="#">Про нас</a></li>
-			<li class="menu__item"><a href="./reviews.html">Відгуки</a></li>
+			<li class="menu__item link"><a href="./sale.html">Акції</a></li>
+			<li class="menu__item link"><a href="#">Оплата</a></li>
+			<li class="menu__item link"><a href="#">Гарантія</a></li>
+			<li class="menu__item link"><a href="./contacts.html">Контакти</a></li>
+			<li class="menu__item link"><a href="#">Доставка</a></li>
+			<li class="menu__item link"><a href="#">Про нас</a></li>
+			<li class="menu__item link"><a href="./reviews.html">Відгуки</a></li>
 		</ul>
 	</nav>
 </header>
