refactored categories section according to bem

--- a/src/index.html
+++ b/src/index.html
@@ -10,60 +10,7 @@
     @@include('html/cart-popup.html')
     @@include('html/callback.html')
     <main class="page">
-      <section class="categories">
-        <div class="categories__container">
-          <ul class="categories__list">
-            <li class="categories-item">
-              <a class="categories-item__link" href="./catalog.html">
-                <div class="categories-item__img"><img src="img/category.jpg" alt="Laptop"></div>
-                <h3 class="categories-item__title">Ноутбуки</h3>
-              </a>
-            </li>
-            <li class="categories-item">
-              <a class="categories-item__link" href="./catalog.html">
-                <div class="categories-item__img"><img src="img/category.jpg" alt="Laptop"></div>
-                <h3 class="categories-item__title">Ноутбуки</h3>
-              </a>
-            </li>
-            <li class="categories-item">
-              <a class="categories-item__link" href="./catalog.html">
-                <div class="categories-item__img"><img src="img/category.jpg" alt="Laptop"></div>
-                <h3 class="categories-item__title">Ноутбуки</h3>
-              </a>
-            </li>
-            <li class="categories-item">
-              <a class="categories-item__link" href="./catalog.html">
-                <div class="categories-item__img"><img src="img/category.jpg" alt="Laptop"></div>
-                <h3 class="categories-item__title">Ноутбуки</h3>
-              </a>
-            </li>
-            <li class="categories-item">
-              <a class="categories-item__link" href="./catalog.html">
-                <div class="categories-item__img"><img src="img/category.jpg" alt="Laptop"></div>
-                <h3 class="categories-item__title">Ноутбуки</h3>
-              </a>
-            </li>
-            <li class="categories-item">
-              <a class="categories-item__link" href="./catalog.html">
-                <div class="categories-item__img"><img src="img/category.jpg" alt="Laptop"></div>
-                <h3 class="categories-item__title">Ноутбуки</h3>
-              </a>
-            </li>
-            <li class="categories-item">
-              <a class="categories-item__link" href="./catalog.html">
-                <div class="categories-item__img"><img src="img/category.jpg" alt="Laptop"></div>
-                <h3 class="categories-item__title">Ноутбуки</h3>
-              </a>
-            </li>
-            <li class="categories-item">
-              <a class="categories-item__link" href="./catalog.html">
-                <div class="categories-item__img"><img src="img/category.jpg" alt="Laptop"></div>
-                <h3 class="categories-item__title">Ноутбуки</h3>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </section>
+      @@include('html/categories.html')
       <section class="new">
         <div class="new__container">
           <h2 class="new__title title-second">Новинки</h2>
