refactored new section according to bem

--- a/src/index.html
+++ b/src/index.html
@@ -11,93 +11,7 @@
     @@include('html/callback.html')
     <main class="page">
       @@include('html/categories.html')
-      <section class="new">
-        <div class="new__container">
-          <h2 class="new__title title-second">Новинки</h2>
-          <div class="new-slider swiper">
-            <div class="new-slider__wrapper swiper-wrapper">
-              <div class="product-card swiper-slide">
-                <div class="product-card__img">
-                  <a href="./product.html"><img src="img/category.jpg" alt="laptop"></a>
-                </div>
-                <h3 class="product-card__title">
-                  <a href="./product.html">Ноутбук 17.3" ASUS ROG Strix SCAR (G733PY-XS96)</a>
-                </h3>
-                <div class="product-card__bottom">
-                  <div class="product-card-price">
-                    <p class="product-card-price__old">19999 грн</p>
-                    <p class="product-card-price__actual">15000 грн</p>
-                  </div>
-                  <a href="./product.html" class="product-card__buy button">Придбати</a>
-                </div>
-              </div>
-              <div class="product-card swiper-slide">
-                <div class="product-card__img"><a href="./product.html"><img src="img/category.jpg" alt="laptop"></a>
-                </div>
-                <h3 class="product-card__title"><a href="./product.html">Ноутбук 17.3" ASUS ROG Strix SCAR
-                    (G733PY-XS96)</a></h3>
-                <div class="product-card__bottom">
-                  <div class="product-card-price">
-                    <p class="product-card-price__old">19999 грн</p>
-                    <p class="product-card-price__actual">15000 грн</p>
-                  </div>
-                  <a href="./product.html" class="product-card__buy button">Придбати</a>
-                </div>
-              </div>
-              <div class="product-card swiper-slide">
-                <div class="product-card__img"><a href="./product.html"><img src="img/category.jpg" alt="laptop"></a>
-                </div>
-                <h3 class="product-card__title"><a href="./product.html">Ноутбук 17.3" ASUS ROG Strix SCAR
-                    (G733PY-XS96)</a></h3>
-                <div class="product-card__bottom">
-                  <div class="product-card-price">
-                    <p class="product-card-price__old">19999 грн</p>
-                    <p class="product-card-price__actual">15000 грн</p>
-                  </div>
-                  <a href="./product.html" class="product-card__buy button">Придбати</a>
-                </div>
-              </div>
-              <div class="product-card swiper-slide">
-                <div class="product-card__img"><a href="./product.html"><img src="img/category.jpg" alt="laptop"></a>
-                </div>
-                <h3 class="product-card__title"><a href="./product.html">Ноутбук 17.3" ASUS ROG Strix SCAR
-                    (G733PY-XS96)</a></h3>
-                <div class="product-card__bottom">
-                  <div class="product-card-price">
-                    <p class="product-card-price__old">19999 грн</p>
-                    <p class="product-card-price__actual">15000 грн</p>
-                  </div>
-                  <a href="./product.html" class="product-card__buy button">Придбати</a>
-                </div>
-              </div>
-              <div class="product-card swiper-slide">
-                <div class="product-card__img"><a href="./product.html"><img src="img/category.jpg" alt="laptop"></a>
-                </div>
-                <h3 class="product-card__title"><a href="./product.html">Ноутбук 17.3" ASUS ROG Strix SCAR
-                    (G733PY-XS96)</a></h3>
-                <div class="product-card__bottom">
-                  <div class="product-card-price">
-                    <p class="product-card-price__old">19999 грн</p>
-                    <p class="product-card-price__actual">15000 грн</p>
-                  </div>
-                  <a href="./product.html" class="product-card__buy button">Придбати</a>
-                </div>
-              </div>
-            </div>
-            <div class="swiper-pagination"></div>
-          </div>
-          <button class="new-prev swiper-button-prev">
-            <svg width="50" height="50">
-              <use xlink:href="img/icons/icons.svg#swiper-arrow"></use>
-            </svg>
-          </button>
-          <button class="new-next swiper-button-next">
-            <svg width="50" height="50">
-              <use xlink:href="img/icons/icons.svg#swiper-arrow"></use>
-            </svg>
-          </button>
-        </div>
-      </section>
+      @@include('html/new.html')
       <button class="to-top button-action">
         <svg width="50" height="50">
           <use xlink:href="img/icons/icons.svg#more"></use>
