refactored action-buttons according to bem

--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,12 @@
     <main class="page">
       @@include('html/categories.html')
       @@include('html/new.html')
-      <button class="to-top button-action">
+      <button class="action-button to-top">
         <svg width="50" height="50">
           <use xlink:href="img/icons/icons.svg#more"></use>
         </svg>
       </button>
-      <button data-type="callback" class="callback__btn button-action">
+      <button data-type="callback" class="action-button callback-btn">
         <svg width="50" height="50">
           <use xlink:href="img/icons/icons.svg#phone"></use>
         </svg>
