--- a/src/html/new.html
+++ b/src/html/new.html
@@ -1,5 +1,5 @@
 <section class="new container">
-  <h2 class="new__title section-title">Новинки</h2>
+  <h2 class="new__title title-second">Новинки</h2>
   <div class="new__slider slider swiper">
     <div class="slider__wrapper swiper-wrapper">
       <div class="product-card swiper-slide">
