--- a/src/html/callback.html
+++ b/src/html/callback.html
@@ -2,7 +2,7 @@
     <div class="popup__content">
         <div class="popup__container">
             <div class="popup__header">
-                <h2 class="popup__title title-first">Зворотній зв'язок</h2>
+                <h2 class="popup__title title">Зворотній зв'язок</h2>
                 <button class="popup__close button-close">
                     <svg width="35" height="35">
                         <use xlink:href="img/icons/icons.svg#close"></use>
@@ -10,11 +10,11 @@
                 </button>
             </div>
             <form action="" method="post" class="form">
-                <div class="form__block _half-row">
+                <div class="form__block form__block_half-row">
                     <label for="name" class="form__label">Ваше ім'я та прізвище</label>
                     <input id="name" class="form__input" type="text" name="name" placeholder="ПІБ" required>
                 </div>
-                <div class="form__block _half-row">
+                <div class="form__block form__block_half-row">
                     <label for="phone__call" class="form__label">Телефон</label>
                     <input class="form__input" id="phone__call" type="tel" name="phone" placeholder="+38 (___) ___-____"
                         required>
