refactored filter block according to bem

--- a/src/html/filter.html
+++ b/src/html/filter.html
@@ -5,25 +5,25 @@
     </svg>
   </button>
   <ul class="filter-applied">
-    <li class="filter-applied-item">
-      <h3 class="filter-applied-item__title">Процесор:</h3>
+    <li class="filter-applied__item">
+      <h3 class="filter-applied__title">Процесор:</h3>
       <ul>
-        <li class="filter-applied-item__option"><button class="button">Intel Core I5</button></li>
-        <li class="filter-applied-item__option"><button class="button">AMD ryzen 7</button></li>
+        <li class="filter-applied__option"><button class="button">Intel Core I5</button></li>
+        <li class="filter-applied__option"><button class="button">AMD ryzen 7</button></li>
       </ul>
     </li>
-    <li class="filter-applied-item">
-      <h3 class="filter-applied-item__title">Оперативна пам'ять:</h3>
+    <li class="filter-applied__item">
+      <h3 class="filter-applied__title">Оперативна пам'ять:</h3>
       <ul>
-        <li class="filter-applied-item__option"><button class="button">8 ГБ</button></li>
-        <li class="filter-applied-item__option"><button class="button">16 ГБ</button></li>
+        <li class="filter-applied__option"><button class="button">8 ГБ</button></li>
+        <li class="filter-applied__option"><button class="button">16 ГБ</button></li>
       </ul>
     </li>
   </ul>
   <form data-spollers class="filter__body">
-    <button class="filter-reset" type="reset">Скинути все</button>
+    <button class="filter__reset" type="reset">Скинути все</button>
     <fieldset class="filter-group">
-      <legend class="filter-group__title filter-group__title_price">Ціни</legend>
+      <legend class="filter-group__title filter-group__title_no-arrow">Ціни</legend>
       <div class="filter-group__price">
         <input type="number" class="filter-group__input" id="minPrice" value="100">
         <span class="filter-group__line"></span>
